2978 - fix cell elements not centered

--- a/stencil-workspace/src/components/modus-table/modus-table.scss
+++ b/stencil-workspace/src/components/modus-table/modus-table.scss
@@ -283,7 +283,6 @@ table {
         // density-relaxed
         padding-bottom: $rem-14px;
         padding-top: $rem-14px;
-        vertical-align: top;
 
         &.row-checkbox {
           padding-bottom: $rem-12px;
